modificado rotas no arquivo swagger.json (1)
