# src/routes/news.route.js
@@ -9,9 +9,9 @@ router.get("/", findAll);
 router.get("/top", topNews);
 router.get("/search", searchByTitle);
 router.get("/byUser", authMiddleware, byUser);
-router.get("/:id", authMiddleware, findById);
+router.get("/:id/", authMiddleware, findById);
 router.patch("/:id", authMiddleware, update);
-router.delete("/:id", authMiddleware, erase);
+router.delete("/delete/:id", authMiddleware, erase);
 router.patch("/like/:id", authMiddleware, likeNews);
 router.patch("/comment/:id", authMiddleware, addComment);
 router.patch("/comment/:idNews/:idComment", authMiddleware, deleteComment); //essa rota é de deletar, pq para deletar temos que alterar
